Fixed checkstyle complaints